--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  flutter_expandable_fab: ^1.8.1
   flutter_svg: ^2.0.7
   http: ^1.0.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
