--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  async: ^2.11.0
   flutter_svg: ^2.0.7
   http: ^1.0.0
   provider: ^6.0.0
