--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   async: ^2.11.0
+  intl: ^0.18.1
   flutter_svg: ^2.0.7
   http: ^1.0.0
   provider: ^6.0.0
